--- a/web/ustclug-org-404.html
+++ b/web/ustclug-org-404.html
@@ -1,6 +1,8 @@
 <p>
   Please update your configure to
-  <a href="//pgp.ustc.edu.cn"></a>pgp.ustc.edu.cn
-  请更新你的配置文件为
-  <a href="//pgp.ustc.edu.cn"></a>pgp.ustc.edu.cn
+  <a href="//pgp.ustc.edu.cn">pgp.ustc.edu.cn</a>
+</p>
 <p>
+  请更新你的配置文件为
+  <a href="//pgp.ustc.edu.cn">pgp.ustc.edu.cn</a>
+</p>
