--- a/web/ustclug-org-404.html
+++ b/web/ustclug-org-404.html
@@ -1,3 +1,7 @@
+<html>
+<head><title>404 Not Found</title></head>
+<body><center>
+<h1>404 Not Found</h1>
 <p>
   Please update your configure to
   <a href="//pgp.ustc.edu.cn">pgp.ustc.edu.cn</a>
@@ -6,3 +10,5 @@
   请更新你的配置文件为
   <a href="//pgp.ustc.edu.cn">pgp.ustc.edu.cn</a>
 </p>
+</center></body>
+</html>
