add blank target on faq link
Signed-off-by: Shengjing Zhu <i@zhsj.me>

--- a/web/index.html
+++ b/web/index.html
@@ -249,13 +249,13 @@
                                     <tr>
                                         <td>SKS</td>
                                         <td>
-                                            <a href="https://bitbucket.org/skskeyserver/sks-keyserver">https://bitbucket.org/skskeyserver/sks-keyserver</a>
+                                            <a href="https://bitbucket.org/skskeyserver/sks-keyserver" target="_blank">https://bitbucket.org/skskeyserver/sks-keyserver</a>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>Key Server Pool</td>
                                         <td>
-                                            <a href="https://sks-keyservers.net">https://sks-keyservers.net</a>
+                                            <a href="https://sks-keyservers.net" target="_blank">https://sks-keyservers.net</a>
                                         </td>
                                     </tr>
                                     <tr>
