--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,9 @@
-<html>
+<!DOCTYPE HTML>
+<html lang="en">
 
 <head>
     <title>PGP Key Server</title>
+    <meta charset="utf-8">
     <style>
         .content>input,
         .content section>div {
@@ -201,69 +203,67 @@
                 <p class="zh">
                     你可以搜索一个公钥中的 userid（name, email 等），或者直接输入 keyid 的十六进制格式（如 "0x&#8230;"）。
                 </p>
-                <p>
-                    <form id="lookup" action="/pks/lookup" method="get">
-                        <fieldset checked="true">
-                            <legend>
-                                <span class="en">Search for a public key</span>
-                                <span class="zh">搜索公钥</span>
-                            </legend>
-                            <p>
-                                <input id="search" name="search" placeholder="0xDEADBEEF" required="" autofocus="" type="text">
-                            </p>
-                            <p>
-                                <input id="fingerprint" name="fingerprint" type="checkbox">
-                                <label for="fingerprint">
-                                    <span class="en">Show PGP Fingerprints</span>
-                                    <span class="zh">显示 PGP 指纹</span>
-                                </label>
-                            </p>
-                            <p>
-                                <input id="hash" name="hash" type="checkbox">
-                                <label for="hash">
-                                    <span class="en">Show SKS full-key hashes</span>
-                                    <span class="zh">显示 SKS full-key 哈希</span>
-                                </label>
-                            </p>
-                            <p>
-                                <input id="matching" name="op" value="index" type="radio">
-                                <label for="matching">
-                                    <span class="en">Get regular index of matching keys</span>
-                                    <span class="zh">获取匹配公钥的 regular index</span>
-                                </label>
-                            </p>
-                            <p>
-                                <input id="verbose" name="op" value="vindex" checked="checked" type="radio">
-                                <label for="verbose">
-                                    <span class="en">Get verbose index of matching keys</span>
-                                    <span class="zh">获取匹配公钥的 verbose index</span>
-                                </label>
-                            </p>
-                            <p>
-                                <input id="asciiarmored" name="op" value="get" type="radio">
-                                <label for="asciiarmored">
-                                    <span class="en">Retrieve ascii-armored keys</span>
-                                    <span class="zh">获取 ascii-armored 格式的公钥</span>
-                                </label>
-                            </p>
-                            <p>
-                                <input id="fullkey" name="op" value="hget" type="radio">
-                                <label for="fullkey">
-                                    <span class="en">Retrieve keys by full-key hash</span>
-                                    <span class="zh">通过 full-key 哈希获取公钥</span>
-                                </label>
-                            </p>
-                            <button type="reset">
-                                <span class="en">Reset</span>
-                                <span class="zh">重置</span>
-                            </button>
-                            <button type="submit">
-                                <span class="en">Search for a key</span>
-                                <span class="zh">搜索公钥</span>
-                            </button>
-                        </fieldset>
-                    </form>
-                </p>
+                <form id="lookup" action="/pks/lookup" method="get">
+                    <fieldset>
+                        <legend>
+                            <span class="en">Search for a public key</span>
+                            <span class="zh">搜索公钥</span>
+                        </legend>
+                        <p>
+                            <input id="search" name="search" placeholder="0xDEADBEEF" required="" autofocus="" type="text">
+                        </p>
+                        <p>
+                            <input id="fingerprint" name="fingerprint" type="checkbox">
+                            <label for="fingerprint">
+                                <span class="en">Show PGP Fingerprints</span>
+                                <span class="zh">显示 PGP 指纹</span>
+                            </label>
+                        </p>
+                        <p>
+                            <input id="hash" name="hash" type="checkbox">
+                            <label for="hash">
+                                <span class="en">Show SKS full-key hashes</span>
+                                <span class="zh">显示 SKS full-key 哈希</span>
+                            </label>
+                        </p>
+                        <p>
+                            <input id="matching" name="op" value="index" type="radio">
+                            <label for="matching">
+                                <span class="en">Get regular index of matching keys</span>
+                                <span class="zh">获取匹配公钥的 regular index</span>
+                            </label>
+                        </p>
+                        <p>
+                            <input id="verbose" name="op" value="vindex" checked="checked" type="radio">
+                            <label for="verbose">
+                                <span class="en">Get verbose index of matching keys</span>
+                                <span class="zh">获取匹配公钥的 verbose index</span>
+                            </label>
+                        </p>
+                        <p>
+                            <input id="asciiarmored" name="op" value="get" type="radio">
+                            <label for="asciiarmored">
+                                <span class="en">Retrieve ascii-armored keys</span>
+                                <span class="zh">获取 ascii-armored 格式的公钥</span>
+                            </label>
+                        </p>
+                        <p>
+                            <input id="fullkey" name="op" value="hget" type="radio">
+                            <label for="fullkey">
+                                <span class="en">Retrieve keys by full-key hash</span>
+                                <span class="zh">通过 full-key 哈希获取公钥</span>
+                            </label>
+                        </p>
+                        <button type="reset">
+                            <span class="en">Reset</span>
+                            <span class="zh">重置</span>
+                        </button>
+                        <button type="submit">
+                            <span class="en">Search for a key</span>
+                            <span class="zh">搜索公钥</span>
+                        </button>
+                    </fieldset>
+                </form>
             </div>
             <div class="tab2">
                 <h2>
@@ -276,110 +276,106 @@
                 <p class="zh">
                     你可以把公钥 ASCII-armored 格式的内容粘贴在这里，然后点击提交上传。
                 </p>
-                <p>
-                    <form id="add" action="/pks/add" method="post">
-                        <textarea id="keytext" name="keytext" rows="5" cols="30"></textarea>
-                        <p>
-                            <button type="reset">
-                                <span class="en">Reset</span>
-                                <span class="zh">重置</span>
-                            </button>
-                            <button checked="true" type="submit">
-                                <span class="en">Submit this key</span>
-                                <span class="zh">提交公钥</span>
-                            </button>
-                        </p>
-                    </form>
-                </p>
+                <form id="add" action="/pks/add" method="post">
+                    <textarea id="keytext" name="keytext" rows="5" cols="30"></textarea>
+                    <p>
+                        <button type="reset">
+                            <span class="en">Reset</span>
+                            <span class="zh">重置</span>
+                        </button>
+                        <button type="submit">
+                            <span class="en">Submit this key</span>
+                            <span class="zh">提交公钥</span>
+                        </button>
+                    </p>
+                </form>
             </div>
             <div class="tab3">
                 <h2>FAQ</h2>
-                <p>
-                    <ul>
-                        <li>
-                            <h3>
-                                <span class="en">Q1: The server info</span>
-                                <span class="zh">Q1: 服务器信息</span>
-                            </h3>
-                            <p class="en">
-                                This server is sponsored by
-                                <a href="https://ustcnet.ustc.edu.cn/" target="_blank">USTC Network Information Center</a>. The deployment scripts, source of the webpage can be
-                                found at
-                                <a href="https://github.com/zhsj/sks-ustc/" target="_blank">GitHub</a>.
-                            </p>
-                            <p class="zh">
-                                本服务是由
-                                <a href="https://ustcnet.ustc.edu.cn/" target="_blank">中国科学技术大学网络信息中心</a>提供赞助。 服务器的部署脚本、本网页的源码可在
-                                <a href="https://github.com/zhsj/sks-ustc/" target="_blank">GitHub</a> 找到。
-                            </p>
-                            <p class="en">
-                                For operational questions, please contact
-                                <a href="/pks/lookup?op=vindex&search=0xCF0E265B7DFBB2F2">0xCF0E265B7DFBB2F2</a>.
-                            </p>
-                            <p class="zh">
-                                如果有任何运营方面的问题，可以联系
-                                <a href="/pks/lookup?op=vindex&search=0xCF0E265B7DFBB2F2">0xCF0E265B7DFBB2F2</a>。
-                            </p>
-                        </li>
-                        <li>
-                            <h3>
-                                <span class="en">Q2: Configuration for GnuPG</span>
-                                <span class="zh">Q2: GnuPG 配置</span>
-                            </h3>
-                            <p class="en">
-                                For GnuPG 2, you can put following line in
-                                <code> ~/.gnupg/dirmngr.conf</code>:
-                            </p>
-                            <p class="zh">
-                                GnuPG 2 的用户，可以在
-                                <code> ~/.gnupg/dirmngr.conf</code> 文件中加入下面一行：
-                            </p>
-                            <pre><code>keyserver hkps://pgp.ustc.edu.cn</code></pre>
-                            <p class="en">
-                                Then run
-                                <code>gpgconf --reload dirmngr</code> to reload dirmngr.
-                            </p>
-                            <p class="zh">
-                                然后运行
-                                <code>gpgconf --reload dirmngr</code> 使配置生效。
-                            </p>
-                        </li>
-                        <li>
-                            <h3>
-                                <span class="en">Q3: Useful links</span>
-                                <span class="zh">Q3: 参考链接</span>
-                            </h3>
-                            <table>
-                                <tbody>
-                                    <tr>
-                                        <td>OpenPGP</td>
-                                        <td>
-                                            <a href="https://www.openpgp.org" target="_blank">https://www.openpgp.org</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>SKS</td>
-                                        <td>
-                                            <a href="https://bitbucket.org/skskeyserver/sks-keyserver" target="_blank">https://bitbucket.org/skskeyserver/sks-keyserver</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Key Server Pool</td>
-                                        <td>
-                                            <a href="https://sks-keyservers.net" target="_blank">https://sks-keyservers.net</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Server Stats</td>
-                                        <td>
-                                            <a href="/pks/lookup?op=stats">/pks/lookup?op=stats</a>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </li>
-                    </ul>
-                </p>
+                <ul>
+                    <li>
+                        <h3>
+                            <span class="en">Q1: The server info</span>
+                            <span class="zh">Q1: 服务器信息</span>
+                        </h3>
+                        <p class="en">
+                            This server is sponsored by
+                            <a href="https://ustcnet.ustc.edu.cn/" target="_blank">USTC Network Information Center</a>. The deployment scripts, source of the webpage can be found
+                            at
+                            <a href="https://github.com/zhsj/sks-ustc/" target="_blank">GitHub</a>.
+                        </p>
+                        <p class="zh">
+                            本服务是由
+                            <a href="https://ustcnet.ustc.edu.cn/" target="_blank">中国科学技术大学网络信息中心</a>提供赞助。 服务器的部署脚本、本网页的源码可在
+                            <a href="https://github.com/zhsj/sks-ustc/" target="_blank">GitHub</a> 找到。
+                        </p>
+                        <p class="en">
+                            For operational questions, please contact
+                            <a href="/pks/lookup?op=vindex&search=0xCF0E265B7DFBB2F2">0xCF0E265B7DFBB2F2</a>.
+                        </p>
+                        <p class="zh">
+                            如果有任何运营方面的问题，可以联系
+                            <a href="/pks/lookup?op=vindex&search=0xCF0E265B7DFBB2F2">0xCF0E265B7DFBB2F2</a>。
+                        </p>
+                    </li>
+                    <li>
+                        <h3>
+                            <span class="en">Q2: Configuration for GnuPG</span>
+                            <span class="zh">Q2: GnuPG 配置</span>
+                        </h3>
+                        <p class="en">
+                            For GnuPG 2, you can put following line in
+                            <code> ~/.gnupg/dirmngr.conf</code>:
+                        </p>
+                        <p class="zh">
+                            GnuPG 2 的用户，可以在
+                            <code> ~/.gnupg/dirmngr.conf</code> 文件中加入下面一行：
+                        </p>
+                        <pre><code>keyserver hkps://pgp.ustc.edu.cn</code></pre>
+                        <p class="en">
+                            Then run
+                            <code>gpgconf --reload dirmngr</code> to reload dirmngr.
+                        </p>
+                        <p class="zh">
+                            然后运行
+                            <code>gpgconf --reload dirmngr</code> 使配置生效。
+                        </p>
+                    </li>
+                    <li>
+                        <h3>
+                            <span class="en">Q3: Useful links</span>
+                            <span class="zh">Q3: 参考链接</span>
+                        </h3>
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td>OpenPGP</td>
+                                    <td>
+                                        <a href="https://www.openpgp.org" target="_blank">https://www.openpgp.org</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>SKS</td>
+                                    <td>
+                                        <a href="https://bitbucket.org/skskeyserver/sks-keyserver" target="_blank">https://bitbucket.org/skskeyserver/sks-keyserver</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Key Server Pool</td>
+                                    <td>
+                                        <a href="https://sks-keyservers.net" target="_blank">https://sks-keyservers.net</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Server Stats</td>
+                                    <td>
+                                        <a href="/pks/lookup?op=stats">/pks/lookup?op=stats</a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </li>
+                </ul>
             </div>
         </section>
     </div>
