update 404 page to pass validator
Signed-off-by: Shengjing Zhu <i@zhsj.me>

--- a/web/others-404.html
+++ b/web/others-404.html
@@ -1,14 +1,23 @@
-<html>
-<head><title>404 Not Found</title></head>
-<body><center>
-<h1>404 Not Found</h1>
-<p>
-  Please update your configure to
-  <a href="//pgp.ustc.edu.cn">pgp.ustc.edu.cn</a>
-</p>
-<p>
-  请更新你的配置文件为
-  <a href="//pgp.ustc.edu.cn">pgp.ustc.edu.cn</a>
-</p>
-</center></body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <title>404 Not Found</title>
+  <meta charset="utf-8">
+</head>
+
+<body>
+  <div style="text-align: center">
+    <h1>404 Not Found</h1>
+    <p>
+      Please update your configuration to
+      <a href="//pgp.ustc.edu.cn">pgp.ustc.edu.cn</a>
+    </p>
+    <p>
+      请更新你的配置文件为
+      <a href="//pgp.ustc.edu.cn">pgp.ustc.edu.cn</a>
+    </p>
+  </div>
+</body>
+
 </html>
