fix line-height for en/zh font
Signed-off-by: Shengjing Zhu <i@zhsj.me>

--- a/web/index.html
+++ b/web/index.html
@@ -86,6 +86,8 @@
             border-bottom: 0;
             background: #eeeeee;
             color: #444;
+            line-height: 1em;
+            vertical-align: middle;
         }
 
         .content ul li label:hover {
