add license info to web file
Signed-off-by: Shengjing Zhu <i@zhsj.me>

--- a/web/index.html
+++ b/web/index.html
@@ -392,5 +392,8 @@
 </html>
 
 <!--
-    CSS from https://codepen.io/renatorib/pen/rlpfj
+    CSS is based on https://codepen.io/renatorib/pen/rlpfj which is MIT licensed,
+    https://blog.codepen.io/legal/licensing/
+
+    This file is also MIT licensed.
 -->
