always use https for lug link
Signed-off-by: Shengjing Zhu <i@zhsj.me>

--- a/web/index.html
+++ b/web/index.html
@@ -384,7 +384,7 @@
 
     <footer>
         by
-        <a href="//lug.ustc.edu.cn" target="_blank">LUG@USTC</a>
+        <a href="https://lug.ustc.edu.cn" target="_blank">LUG@USTC</a>
     </footer>
 
 </body>
