change line length of index.html, improve words
Signed-off-by: Shengjing Zhu <i@zhsj.me>

--- a/web/index.html
+++ b/web/index.html
@@ -199,8 +199,8 @@
                     <span class="zh">获取公钥</span>
                 </h2>
                 <p class="en">
-                    You can find a key by typing in some words that appear in the userid (name, email, etc.) of the key you're looking for, or
-                    by typing in the keyid in hex format ("0x&#8230;")
+                    You can find a key by typing in some words that appear in the userid (name, email, etc.)
+                    of the key you're looking for, or by typing in the keyid in hex format ("0x&#8230;")
                 </p>
                 <p class="zh">
                     你可以搜索一个公钥中的 userid（name, email 等），或者直接输入 keyid 的十六进制格式（如 "0x&#8230;"）。
@@ -302,17 +302,18 @@
                         </h3>
                         <p class="en">
                             This server is sponsored by
-                            <a href="https://ustcnet.ustc.edu.cn/" target="_blank">USTC Network Information Center</a>. The deployment scripts, source of the webpage can be found
-                            at
+                            <a href="https://ustcnet.ustc.edu.cn/" target="_blank">USTC Network Information Center</a>.
+                            The deployment scripts, source of the webpage can be found at
                             <a href="https://github.com/zhsj/sks-ustc/" target="_blank">GitHub</a>.
                         </p>
                         <p class="zh">
                             本服务是由
-                            <a href="https://ustcnet.ustc.edu.cn/" target="_blank">中国科学技术大学网络信息中心</a>提供赞助。 服务器的部署脚本、本网页的源码可在
+                            <a href="https://ustcnet.ustc.edu.cn/" target="_blank">中国科学技术大学网络信息中心</a>
+                            提供赞助。 服务器的部署脚本、本网页的源码可在
                             <a href="https://github.com/zhsj/sks-ustc/" target="_blank">GitHub</a> 找到。
                         </p>
                         <p class="en">
-                            For operational questions, please contact
+                            For operational issues, please contact
                             <a href="/pks/lookup?op=vindex&search=0xCF0E265B7DFBB2F2">0xCF0E265B7DFBB2F2</a>.
                         </p>
                         <p class="zh">
@@ -359,7 +360,9 @@
                                 <tr>
                                     <td>SKS</td>
                                     <td>
-                                        <a href="https://bitbucket.org/skskeyserver/sks-keyserver" target="_blank">https://bitbucket.org/skskeyserver/sks-keyserver</a>
+                                        <a href="https://bitbucket.org/skskeyserver/sks-keyserver" target="_blank">
+                                          https://bitbucket.org/skskeyserver/sks-keyserver
+                                        </a>
                                     </td>
                                 </tr>
                                 <tr>
