web: fix submit textarea width
Signed-off-by: Shengjing Zhu <i@zhsj.me>

--- a/web/index.html
+++ b/web/index.html
@@ -279,7 +279,7 @@
                     你可以把公钥 ASCII-armored 格式的内容粘贴在这里，然后点击提交上传。
                 </p>
                 <form id="add" action="/pks/add" method="post">
-                    <textarea id="keytext" name="keytext" rows="5" cols="30"></textarea>
+                    <textarea id="keytext" name="keytext" rows="5" style="width: 100%"></textarea>
                     <p>
                         <button type="reset">
                             <span class="en">Reset</span>
